--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -21,8 +21,9 @@
 }
 
 /* DESKTOP LAYOUT */
-@media (min-width: 1024px) {
+@media (min-width: 1250px) {
    .page {
       padding-inline: 10rem;
+      min-height: 100vh;
    }
 }
